--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+/* Default styles */
 * {
-    box-sizing: border-radius;
+    box-sizing: border-box;
     font-family: "Rubik", sans-serif;
   }
   
@@ -11,6 +12,8 @@ body {
     justify-content: center;
 }
   
+/* Main container */
+
 .container {
   position: absolute;
   top: 34px;
@@ -18,12 +21,13 @@ body {
   bottom: 29px;
   left: 0;
   margin: auto;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   place-items: center;
   background-color: #daecfd;
-  /* max-height: 500px; */
 }
-  
+
+/* course body */
   .items {
     width: 350px;
     height: 1400px;
@@ -82,20 +86,8 @@ body {
     color: green;
 }
 
+/* Date*/
 
-/* time and date credit codepen : ryomario */
-#clock,#date{
-  user-select:none;
-}
-.glow{
-  align-self: center;
-  color: #0B5AA2;
-  font-weight: bold;
-  font-size: 18px;
-  animation:glow 1s ease-in-out infinite alternate;
-  -moz-animation:glow 1s ease-in-out infinite alternate;
-  -webkit-animation:glow 1s ease-in-out infinite alternate;
-}
 .glow.mini{
   /* align-self: center; */
   font-size: 24px;
